--- a/ClientApp/src/components/homepage.scss
+++ b/ClientApp/src/components/homepage.scss
@@ -5,6 +5,8 @@
   justify-content: center;
   flex-direction: row;
   .sleepButton {
+    display: flex;
+    justify-content: space-evenly;
     color: #fff !important;
     text-transform: uppercase;
     text-decoration: none;
@@ -48,11 +50,32 @@
   }
   .navItem:hover {
     color: $primary-color;
-    letter-spacing: 1px;
+    letter-spacing: 0.0625rem;
     -webkit-text-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.274);
     -moz-text-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.089);
     text-shadow: 5px 40px -10px rgba(165, 120, 120, 0.137);
     transition: all 0.4s ease 0s;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .buttonContainer {
+    .sleepButton {
+      padding: 2rem;
+      border-radius: 0.8rem;
+      font-size: 3rem;
+    }
+    .sleepButton:hover {
+      background: $primary-color;
+      letter-spacing: 0.0525rem;
+    }
+  }
+  .navBar {
+    .navItem {
+      font-size: 2.5rem;
+    }
+    .navItem:hover {
+      letter-spacing: 0.0525rem;
+    }
   }
 }
 @media only screen and (max-width: 450px) {
