raw data added to details page complete

--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -4,6 +4,7 @@
 @import './components/Activate.scss';
 @import './components/SleepQuality.scss';
 @import './components/StatsDisplay.scss';
+@import './components/NavBarDesign.scss';
 html {
   background-color: $quaternary-color;
   min-height: 100vh;
