--- a/ClientApp/src/components/StatsDisplay.scss
+++ b/ClientApp/src/components/StatsDisplay.scss
@@ -10,7 +10,7 @@
     .sleepStatsDay {
       border: solid;
       margin: 1rem;
-      padding: 0.5rem;
+      padding: 1rem;
       .sleepStatsTitle {
         display: flex;
         border-bottom: solid;
@@ -22,6 +22,8 @@
       }
       .displaySleepStatsTextInfo {
         display: flex;
+        justify-content: center;
+        align-items: center;
         font-style: $title-font;
         .sleepDisplayListItems {
           border-right: solid;
@@ -49,7 +51,7 @@
             justify-content: center;
             .titleName {
               font-style: $title-font;
-              padding: 0.2rem 0.2rem 0.2rem 0.2rem;
+              padding: 0.5rem 0.5rem 0.5rem 0.5rem;
             }
             .sleepData {
               font-size: 1rem;
