Made minor changes to home pages,

--- a/ClientApp/src/components/homepage.scss
+++ b/ClientApp/src/components/homepage.scss
@@ -1,5 +1,7 @@
 @import './Design.scss';
 .buttonContainer {
+  min-height: 90vh;
+
   display: flex;
   align-items: center;
   justify-content: center;
