Completed average backend and started styling

--- a/ClientApp/src/components/design.scss
+++ b/ClientApp/src/components/design.scss
@@ -1,8 +1,8 @@
 $primary-color: hsla(160, 100%, 50%, 0.924);
 $secondary-color: hsla(151, 100%, 89%, 0.822);
 $tertiary-color: hsla(223, 100%, 94%, 0.822);
-$quaternary-color: hsla(231, 99%, 35%, 0.801);
+$quaternary-color: hsl(231, 98%, 18%);
 $quinary-color: hsla(183, 100%, 75%, 0.822);
 $senary-color: hsla(180, 100%, 85%, 0.822);
-$title-font: Helvetica;
-$word-font: sans-serif;
+$title-font: 'Futura';
+$word-font: 'Lucida Console', Monaco, monospace;
