--- a/ClientApp/src/components/StatsDisplay.scss
+++ b/ClientApp/src/components/StatsDisplay.scss
@@ -3,6 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  h1,
+  h2,
+  h4 {
+    font-family: $title-font;
+    font-weight: bold;
+  }
+
   .row {
     display: flex;
     align-items: center;
@@ -16,6 +23,7 @@
         display: flex;
         border-bottom: solid;
         justify-content: space-evenly;
+        font-family: $title-font;
         .sleepStatsTitleDayName {
           color: $primary-color;
           padding-left: 0.5rem;
@@ -34,7 +42,7 @@
             flex-direction: column;
             justify-content: center;
             .titleName {
-              font-style: $title-font;
+              font-family: $title-font;
               padding: 0.2rem 0.2rem 0.2rem 0.2rem;
             }
             .sleepData {
