--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -11,7 +11,7 @@ html {
 }
 
 div {
-  background-color: $quaternary-color;
+  background-image: $gradient-image;
   color: $quinary-color;
   min-height: 100vh;
   min-width: 92vw;
