--- a/ClientApp/src/components/Activate.scss
+++ b/ClientApp/src/components/Activate.scss
@@ -6,6 +6,11 @@
   justify-content: center;
   flex-direction: column;
 
+  h2 {
+    text-align: center;
+    font-family: $title-font;
+  }
+
   .stopButton {
     display: flex;
     justify-content: center;
@@ -18,6 +23,7 @@
     border: none;
     transition: all 0.4s ease 0s;
     font-size: 4rem;
+    font-family: $word-font;
   }
   .stopButton:hover {
     background: $primary-color;
