--- a/ClientApp/src/components/StatsAvg.scss
+++ b/ClientApp/src/components/StatsAvg.scss
@@ -24,6 +24,7 @@
         padding: 0rem;
         padding-left: 1rem;
         font-family: $word-font;
+        color: $primary-color;
       }
     }
   }
