--- a/ClientApp/src/components/NavBarDesign.scss
+++ b/ClientApp/src/components/NavBarDesign.scss
@@ -13,8 +13,8 @@
     .navItem {
       text-align: center;
       font-family: $title-font;
-      font-size: 3rem;
       color: $quinary-color;
+      font-size: 4rem;
     }
     .navItem:hover {
       color: $primary-color;
@@ -23,6 +23,7 @@
       -moz-text-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.089);
       text-shadow: 5px 40px -10px rgba(165, 120, 120, 0.137);
       transition: all 0.4s ease 0s;
+      text-decoration: none;
     }
   }
 }
