--- a/ClientApp/src/components/StatsAvg.scss
+++ b/ClientApp/src/components/StatsAvg.scss
@@ -8,7 +8,7 @@
     font-family: $title-font;
   }
   .avgTable {
-    margin: 2rem 8rem 3rem 8rem;
+    margin: 2rem 1rem 3rem;
     border: solid;
     padding: 2rem;
 
