--- a/ClientApp/src/components/SleepQuality.scss
+++ b/ClientApp/src/components/SleepQuality.scss
@@ -5,7 +5,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
+  .sleepQualityTitle {
+    text-align: center;
+  }
   .sleepQualityButton {
     display: flex;
     justify-content: center;
@@ -23,6 +25,7 @@
       transition: all 0.4s ease 0s;
       font-size: 2rem;
       margin-right: 0.5rem;
+      font-weight: bold;
     }
     .qualityRatingOption:hover {
       background: $primary-color;
