--- a/ClientApp/src/components/homepage.scss
+++ b/ClientApp/src/components/homepage.scss
@@ -20,6 +20,7 @@
     font-size: 2rem;
     font-family: $title-font;
     margin: 2rem;
+    font-weight: bold;
   }
   .sleepButton:hover {
     background: $greenGradient-image;
